# CMakeHDL

./: CMakeHDL.cmake  CMakeLists.txt  README.md
main/: CMakeHDL.cmake  CMakeHDLGhdlLlvm.cmake
test/: CMakeLists.txt
test/e2e/: CMakeLists.txt  ConfigureAndBuild.cmake  TestSimpleVHDLTestbench.cmake
test/e2e/TestSimpleVHDLTestbench/: CMakeLists.txt  and_gate.vhd  and_gate_tb.vhd
test/unit/: CMakeLists.txt
test/unit/CMakeHDL/: CMakeLists.txt  TestAddLibWithNameOnly.cmake  TestAddLibWithSources.cmake  TestAddLibWithoutArgs.cmake  TestAddSim.cmake  TestAddSimWithoutArgs.cmake  TestSearchFileDeps.cmake  TestSearchMergeLibsEmpty.cmake  TestSearchMergeLibsSingle.cmake  TestSearchSources.cmake
test/unit/CMakeHDL/add_simulation/: CMakeLists.txt  TestUsesTerminal.cmake
test/unit/CMakeHDLGhdlLlvm/: CMakeLists.txt  TestAddBuildLibraryCommand.cmake  TestAddBuildSimulationCommand.cmake  TestAddRunSimulationTarget.cmake  TestVhdlRelaxedRules.cmake  TestVhdlStandard1993.cmake  TestVhdlStandard2008.cmake  TestVhdlStandardUnset.cmake
test/unit/CMakeHDLGhdlLlvm/add_run_simulation_target/: CMakeLists.txt  TestUsesTerminal.cmake
